--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -4,59 +4,59 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".LoginActivity">
+    tools:context=".views.LoginActivity">
 
 
     <TextView
         android:id="@+id/textView5"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
+        android:layout_marginLeft="22dp"
         android:layout_marginStart="22dp"
         android:layout_marginTop="62dp"
-        android:text="Login:"
-        android:textSize="25sp"
-        android:layout_alignParentLeft="true"
-        android:layout_marginLeft="22dp" />
+        android:text="@string/login"
+        android:textSize="25sp" />
 
     <TextView
         android:id="@+id/textView6"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_alignLeft="@+id/textView5"
         android:layout_alignParentTop="true"
         android:layout_alignStart="@+id/textView5"
         android:layout_marginTop="184dp"
-        android:text="Senha:"
-        android:textSize="25sp"
-        android:layout_alignLeft="@+id/textView5" />
+        android:text="@string/senha"
+        android:textSize="25sp" />
 
     <EditText
         android:id="@+id/editText"
         android:layout_width="330dp"
         android:layout_height="wrap_content"
+        android:layout_alignLeft="@+id/textView5"
         android:layout_alignParentTop="true"
         android:layout_alignStart="@+id/textView5"
         android:layout_marginTop="112dp"
         android:ems="10"
-        android:hint="Informe o seu login"
+        android:hint="@string/info_login"
         android:inputType="textPersonName"
         android:textAlignment="center"
-        android:textSize="20sp"
-        android:layout_alignLeft="@+id/textView5" />
+        android:textSize="20sp" />
 
     <EditText
         android:id="@+id/editText2"
         android:layout_width="330dp"
         android:layout_height="wrap_content"
+        android:layout_alignLeft="@+id/textView5"
         android:layout_alignStart="@+id/textView5"
         android:layout_centerVertical="true"
         android:ems="10"
-        android:hint="Informe sua senha"
+        android:hint="@string/info_senha"
         android:inputType="textPassword"
         android:textAlignment="center"
-        android:textSize="20sp"
-        android:layout_alignLeft="@+id/textView5" />
+        android:textSize="20sp" />
 
     <Spinner
         android:id="@+id/spinner"
@@ -71,12 +71,12 @@
         android:id="@+id/textView7"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_alignLeft="@+id/textView5"
         android:layout_alignParentBottom="true"
         android:layout_alignStart="@+id/textView5"
         android:layout_marginBottom="169dp"
-        android:text="Tipo:"
-        android:textSize="25sp"
-        android:layout_alignLeft="@+id/textView5" />
+        android:text="@string/tipo"
+        android:textSize="25sp" />
 
     <Button
         android:id="@+id/button"
@@ -86,7 +86,7 @@
         android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true"
         android:layout_marginBottom="37dp"
-        android:text="Realizar Login"
+        android:text="@string/login"
         android:textSize="20sp" />
 
 
