--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -32,7 +32,7 @@
         android:textSize="25sp" />
 
     <EditText
-        android:id="@+id/editText"
+        android:id="@+id/campoLogin"
         android:layout_width="330dp"
         android:layout_height="wrap_content"
         android:layout_alignLeft="@+id/textView5"
@@ -46,7 +46,7 @@
         android:textSize="20sp" />
 
     <EditText
-        android:id="@+id/editText2"
+        android:id="@+id/campoSenha"
         android:layout_width="330dp"
         android:layout_height="wrap_content"
         android:layout_alignLeft="@+id/textView5"
@@ -79,7 +79,7 @@
         android:textSize="25sp" />
 
     <Button
-        android:id="@+id/button"
+        android:id="@+id/login"
         style="@style/Widget.AppCompat.Button.Colored"
         android:layout_width="195dp"
         android:layout_height="60dp"
