--- a/app/src/main/res/layout/activity_cadastro_administrador.xml
+++ b/app/src/main/res/layout/activity_cadastro_administrador.xml
@@ -108,11 +108,11 @@
     <Button
         android:id="@+id/botaoCadastro"
         style="@style/Widget.AppCompat.Button.Colored"
-        android:layout_width="wrap_content"
+        android:layout_width="170dp"
         android:layout_height="60dp"
         android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true"
-        android:layout_marginBottom="39dp"
+        android:layout_marginBottom="30dp"
         android:text="Cadastrar" />
 
 
