--- a/app/src/main/res/layout/activity_menu.xml
+++ b/app/src/main/res/layout/activity_menu.xml
@@ -10,37 +10,37 @@
         android:id="@+id/botaoAtividade"
         android:layout_width="132dp"
         android:layout_height="131dp"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentTop="true"
-        android:layout_marginStart="41dp"
-        android:layout_marginTop="63dp"
-        android:src="@drawable/ag1"
+        android:layout_alignEnd="@+id/botaoCadastro"
+        android:layout_alignTop="@+id/botaoContatos"
         android:background="@android:color/transparent"
-        android:layout_alignParentLeft="true"
-        android:layout_marginLeft="41dp" />
+        android:src="@drawable/ag1"
+        android:layout_alignRight="@+id/botaoCadastro" />
 
     <ImageButton
         android:id="@+id/botaoContatos"
         android:layout_width="137dp"
         android:layout_height="131dp"
         android:layout_alignParentEnd="true"
-        android:layout_alignTop="@+id/botaoAtividade"
-        android:layout_marginEnd="38dp"
-        android:src="@drawable/p1"
+        android:layout_alignParentTop="true"
+        android:layout_marginEnd="24dp"
+        android:layout_marginTop="91dp"
         android:background="@android:color/transparent"
-        android:layout_marginRight="38dp"
-        android:layout_alignParentRight="true" />
+        android:src="@drawable/p1"
+        android:layout_alignParentRight="true"
+        android:layout_marginRight="24dp" />
 
     <ImageButton
         android:id="@+id/botaoCadastro"
         android:layout_width="137dp"
         android:layout_height="131dp"
         android:layout_alignParentBottom="true"
-        android:layout_alignStart="@+id/botaoAtividade"
-        android:layout_marginBottom="144dp"
-        android:src="@drawable/cont"
+        android:layout_alignParentStart="true"
+        android:layout_marginBottom="116dp"
+        android:layout_marginStart="23dp"
         android:background="@android:color/transparent"
-        android:layout_alignLeft="@+id/botaoAtividade" />
+        android:src="@drawable/cont"
+        android:layout_marginLeft="23dp"
+        android:layout_alignParentLeft="true" />
 
     <ImageButton
         android:id="@+id/botaoDuvida"
@@ -48,7 +48,8 @@
         android:layout_height="131dp"
         android:layout_alignStart="@+id/botaoContatos"
         android:layout_alignTop="@+id/botaoCadastro"
-        android:src="@drawable/ch1"
         android:background="@android:color/transparent"
+        android:src="@drawable/ch1"
         android:layout_alignLeft="@+id/botaoContatos" />
+
 </RelativeLayout>
