--- a/app/src/main/res/layout/valores_duvida.xml
+++ b/app/src/main/res/layout/valores_duvida.xml
@@ -1,6 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout
-    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:layout_width="match_parent"
     android:layout_height="match_parent">
 
     <TextView
@@ -8,51 +10,47 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentTop="true"
-        android:layout_alignStart="@+id/textView26"
-        android:layout_marginTop="27dp"
+        android:layout_alignStart="@+id/mensagem"
+        android:layout_marginTop="19dp"
         android:text="De: "
         android:textSize="18sp"
-        android:layout_alignLeft="@+id/textView26" />
+        android:layout_alignLeft="@+id/mensagem" />
 
     <TextView
         android:id="@+id/textView26"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
-        android:layout_marginStart="38dp"
-        android:layout_marginTop="123dp"
+        android:layout_alignStart="@+id/textView25"
+        android:layout_marginTop="100dp"
         android:text="Pergunta: "
-        android:textSize="18sp" />
+        android:textSize="18sp"
+        android:layout_alignLeft="@+id/textView25" />
 
     <TextView
         android:id="@+id/deUsuario"
-        android:layout_width="208dp"
+        android:layout_width="112dp"
         android:layout_height="wrap_content"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
+        android:layout_alignStart="@+id/paraUsuario"
         android:layout_alignTop="@+id/textView25"
-        android:layout_marginLeft="133dp"
-        android:layout_marginStart="133dp"
         android:text="TextView"
-        android:textSize="18sp" />
+        android:textSize="18sp"
+        android:layout_alignLeft="@+id/paraUsuario" />
 
     <TextView
         android:id="@+id/mensagem"
         android:layout_width="301dp"
         android:layout_height="wrap_content"
-        android:layout_alignParentTop="true"
-        android:layout_alignStart="@+id/textView25"
-        android:layout_marginTop="155dp"
+        android:layout_below="@+id/textView26"
+        android:layout_centerHorizontal="true"
         android:text="TextView"
         android:textSize="18sp" />
 
     <Space
         android:layout_width="340dp"
         android:layout_height="19dp"
-        android:layout_alignParentTop="true"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="192dp" />
+        android:layout_below="@+id/mensagem"
+        android:layout_centerHorizontal="true" />
 
     <TextView
         android:id="@+id/textView31"
@@ -60,18 +58,30 @@
         android:layout_height="wrap_content"
         android:layout_alignParentTop="true"
         android:layout_alignStart="@+id/textView25"
-        android:layout_marginTop="75dp"
+        android:layout_marginTop="59dp"
         android:text="Para:"
         android:textSize="18sp"
         android:layout_alignLeft="@+id/textView25" />
 
     <TextView
         android:id="@+id/paraUsuario"
-        android:layout_width="208dp"
+        android:layout_width="113dp"
         android:layout_height="wrap_content"
-        android:layout_alignStart="@+id/deUsuario"
+        android:layout_alignParentStart="true"
         android:layout_alignTop="@+id/textView31"
+        android:layout_marginStart="103dp"
         android:text="TextView"
-        android:textSize="18sp" />
+        android:textSize="18sp"
+        android:layout_alignParentLeft="true"
+        android:layout_marginLeft="103dp" />
+
+    <ImageView
+        android:id="@+id/imageView3"
+        android:layout_width="87dp"
+        android:layout_height="110dp"
+        android:layout_alignEnd="@+id/mensagem"
+        android:layout_alignTop="@+id/textView25"
+        app:srcCompat="@android:drawable/ic_menu_help"
+        android:layout_alignRight="@+id/mensagem" />
 
 </RelativeLayout>
