--- a/app/src/main/res/layout/activity_info_duvida.xml
+++ b/app/src/main/res/layout/activity_info_duvida.xml
@@ -3,7 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".InfoDuvidaActivity">
+    tools:context=".views.InfoDuvidaActivity">
 
     <TextView
         android:id="@+id/textView36"
@@ -22,12 +22,12 @@
         android:layout_alignParentTop="true"
         android:layout_alignStart="@+id/textView36"
         android:layout_marginTop="82dp"
-        android:text="Titulo:"
+        android:text="Enviado por:"
         android:textSize="18sp"
         android:layout_alignLeft="@+id/textView36" />
 
     <TextView
-        android:id="@+id/tituloAtividade"
+        android:id="@+id/campoUsuarioDe"
         android:layout_width="294dp"
         android:layout_height="wrap_content"
         android:layout_alignStart="@+id/textView36"
@@ -69,7 +69,7 @@
         android:text="Responder" />
 
     <EditText
-        android:id="@+id/editText3"
+        android:id="@+id/campoResp"
         android:layout_width="294dp"
         android:layout_height="66dp"
         android:layout_alignParentBottom="true"
@@ -85,7 +85,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignEnd="@+id/textView36"
-        android:layout_below="@+id/editText3"
+        android:layout_below="@+id/campoResp"
         android:layout_marginTop="-98dp"
         android:text="Enviar >"
         android:layout_alignRight="@+id/textView36" />
