--- a/app/src/main/res/layout/activity_cadastro_funcionario.xml
+++ b/app/src/main/res/layout/activity_cadastro_funcionario.xml
@@ -76,7 +76,7 @@
             android:layout_alignLeft="@+id/textView8" />
 
         <EditText
-            android:id="@+id/editText5"
+            android:id="@+id/telefoneCampo"
             android:layout_width="227dp"
             android:layout_height="wrap_content"
             android:layout_alignEnd="@+id/nomeFunc"
@@ -94,7 +94,7 @@
             android:id="@+id/textView10"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_alignBaseline="@+id/editText5"
+            android:layout_alignBaseline="@+id/telefoneCampo"
             android:layout_alignLeft="@+id/textView8"
             android:layout_alignStart="@+id/textView8"
             android:text="Telefone"
