Async Task e serviços de usuario e duvida feitos

--- a/app/src/main/res/layout/activity_info_usuario.xml
+++ b/app/src/main/res/layout/activity_info_usuario.xml
@@ -13,7 +13,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="43dp"
         android:text="Informações do Usuário"
-        android:textSize="26sp"
+        android:textSize="30sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -23,19 +23,19 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="8dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginLeft="52dp"
-        android:layout_marginRight="8dp"
-        android:layout_marginStart="52dp"
+        android:layout_marginEnd="280dp"
+        android:layout_marginLeft="8dp"
+        android:layout_marginRight="280dp"
+        android:layout_marginStart="8dp"
         android:layout_marginTop="116dp"
         android:text="Nome:"
-        android:textSize="20sp"
+        android:textSize="24sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintHorizontal_bias="0.884"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.057" />
+        app:layout_constraintVertical_bias="0.0" />
 
     <TextView
         android:id="@+id/nomeUsu"
@@ -45,7 +45,7 @@
         android:layout_marginEnd="8dp"
         android:layout_marginRight="8dp"
         android:text="TextView"
-        android:textSize="20sp"
+        android:textSize="24sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
@@ -60,13 +60,13 @@
         android:layout_marginBottom="8dp"
         android:layout_marginTop="32dp"
         android:text="Número:"
-        android:textSize="20sp"
+        android:textSize="24sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="@+id/nomeUsu"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="@+id/nomeUsu"
         app:layout_constraintTop_toBottomOf="@+id/nomeUsu"
-        app:layout_constraintVertical_bias="0.075" />
+        app:layout_constraintVertical_bias="0.015" />
 
     <TextView
         android:id="@+id/numUsu"
@@ -76,7 +76,7 @@
         android:layout_marginEnd="8dp"
         android:layout_marginRight="8dp"
         android:text="TextView"
-        android:textSize="20sp"
+        android:textSize="24sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
@@ -89,29 +89,37 @@
         style="@style/Widget.AppCompat.Button.Colored"
         android:layout_width="114dp"
         android:layout_height="60dp"
-        android:layout_marginBottom="84dp"
-        android:layout_marginLeft="24dp"
-        android:layout_marginStart="24dp"
+        android:layout_marginBottom="104dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginLeft="8dp"
+        android:layout_marginRight="8dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
         android:text="Ligar"
         android:textSize="16sp"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/numUsu"
+        app:layout_constraintVertical_bias="0.779" />
 
     <Button
         android:id="@+id/botaoAgenda"
         style="@style/Widget.AppCompat.Button.Colored"
         android:layout_width="wrap_content"
         android:layout_height="60dp"
-        android:layout_marginEnd="24dp"
+        android:layout_marginBottom="8dp"
+        android:layout_marginEnd="96dp"
         android:layout_marginLeft="8dp"
-        android:layout_marginRight="24dp"
+        android:layout_marginRight="96dp"
         android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
         android:text="Adicionar a Agenda"
         android:textSize="16sp"
-        app:layout_constraintBottom_toBottomOf="@+id/botaoLigar"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="1.0"
-        app:layout_constraintStart_toEndOf="@+id/botaoLigar"
-        app:layout_constraintTop_toTopOf="@+id/botaoLigar"
-        app:layout_constraintVertical_bias="1.0" />
+        app:layout_constraintHorizontal_bias="0.978"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/botaoLigar"
+        app:layout_constraintVertical_bias="0.292" />
 </android.support.constraint.ConstraintLayout>
