--- a/app/src/main/res/layout/activity_cadastro_duvida.xml
+++ b/app/src/main/res/layout/activity_cadastro_duvida.xml
@@ -94,7 +94,6 @@
         android:layout_below="@+id/textView34"
         android:layout_marginBottom="8dp"
         android:layout_marginTop="8dp"
-        android:text="Teste"
         android:textSize="18sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -127,7 +126,7 @@
     <EditText
         android:id="@+id/campoPerg"
         android:layout_width="320dp"
-        android:layout_height="94dp"
+        android:layout_height="111dp"
         android:layout_alignLeft="@+id/textView34"
         android:layout_alignStart="@+id/textView34"
         android:layout_below="@+id/textView41"
@@ -155,6 +154,7 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/campoPerg" />
+        app:layout_constraintTop_toBottomOf="@+id/campoPerg"
+        app:layout_constraintVertical_bias="0.552" />
 
 </android.support.constraint.ConstraintLayout>
