Adicionado mascara para campo telefone e incremento da funcionalidade de contatos

--- a/app/src/main/res/layout/activity_cadastro_funcionario.xml
+++ b/app/src/main/res/layout/activity_cadastro_funcionario.xml
@@ -86,6 +86,7 @@
             android:ems="10"
             android:gravity="center"
             android:hint="Informe o telefone"
+            android:maxLength="15"
             android:inputType="phone"
             android:textAlignment="center"
             android:textSize="20sp" />
